terraform-AZURE/network.tf
# Resource Group
resource "azurerm_resource_group" "aks_rg" {
  name     = var.resource_group_name
  location = var.location
}

# Virtual Network
resource "azurerm_virtual_network" "vnet" {
  name                = "aks-vnet"
  address_space       = ["10.0.0.0/8"]
  location            = azurerm_resource_group.aks_rg.location
  resource_group_name = azurerm_resource_group.aks_rg.name
}

# Subnet for AKS
resource "azurerm_subnet" "aks_subnet" {
  name                 = "aks-subnet"
  resource_group_name  = azurerm_resource_group.aks_rg.name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["10.1.0.0/16"]
  service_endpoints    = ["Microsoft.Storage"]
}

resource "azurerm_route_table" "aks_route_table" {
  name                          = "aks-route-table"
  location                      = azurerm_resource_group.aks_rg.location
  resource_group_name            = azurerm_resource_group.aks_rg.name
}

resource "azurerm_route" "default_route" {
  name                   = "default-route"
  resource_group_name     = azurerm_resource_group.aks_rg.name
  route_table_name        = azurerm_route_table.aks_route_table.name
  address_prefix          = "0.0.0.0/0"
  next_hop_type           = "VirtualAppliance"
}

resource "azurerm_subnet_route_table_association" "aks_subnet_route_table" {
  subnet_id      = azurerm_subnet.aks_subnet.id
  route_table_id = azurerm_route_table.aks_route_table.id
}

# Network Security Group
resource "azurerm_network_security_group" "aks_nsg" {
  name                = "aks-nsg"
  location            = azurerm_resource_group.aks_rg.location
  resource_group_name = azurerm_resource_group.aks_rg.name
}

# Associate NSG with Subnet
resource "azurerm_subnet_network_security_group_association" "aks_subnet_nsg" {
  subnet_id                 = azurerm_subnet.aks_subnet.id
  network_security_group_id = azurerm_network_security_group.aks_nsg.id
}

# NSG Rules (Optional, adjust as needed)
resource "azurerm_network_security_rule" "allow_k8s_api" {
  name                        = "AllowK8sAPI"
  priority                    = 100
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_ranges     = ["443"]
  source_address_prefixes     = var.trusted_ip_ranges
  destination_address_prefix  = "*"
  network_security_group_name = azurerm_network_security_group.aks_nsg.name
  resource_group_name         = azurerm_resource_group.aks_rg.name
}
